# opinion_bearer_token_sdk

./: README.md  pyproject.toml
.cache/opinion/: topic_1274.json
examples/: place_order.env.example  place_order.py
opinion_trade_sdk/: __init__.py  constants.py  errors.py  order_book_api.py  order_builder.py  sdk.py  signer.py  topic_api.py  types.py  utils.py
opinion_trade_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
opinion_trade_sdk/network/: __init__.py  http_client.py  performance.py
